Adding header, footer and some styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
   <header>
     <h1>William Le</h1>
-    <p>Full Stack Software Engineer</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
 
   <main>
@@ -53,7 +57,10 @@
     <section id="contact">
       <h2>Contact</h2>
       <p>Email: <a href="mailto:williamle2305@gmail.com">williamle2305@gmail.com</a></p>
-    </section>
+    </section>   
   </main>
 </body>
+<footer>
+  <p>© 2025 wontliam — Built with 💻 & hosted on GitHub Pages</p>
+</footer> 
 </html>
