--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
 <body>
   <header>
     <h1>William Le</h1>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
   </header>
 
   <main>
@@ -22,10 +17,20 @@
       <p>Hi, I'm Will. I like learning new things. This site showcases some of my work and interests as I grow as a developer.</p>
     </section>
 
-    <section id="education">
-      <h2>Education</h2>
-      <p><strong>New Mexico State University, Main Campus - Las Cruces</strong></p>
-      <p>Bachelor of Science in Computer Science, Dec 2022</p>
+    <section id="experience">
+      <h2>Experience</h2>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+      <ul>
+        <li>
+          <strong>Traxporta</strong> – Logistics app built with Vue and Syncfusion for the frontend and .NET C# for the backend.
+          [Private]
+        </li>
+        <!-- Add more projects here -->
+      </ul>
+    </section>
 
     <section id="skills">
       <h2>Skills</h2>
@@ -38,15 +43,10 @@
       </ul>
     </section>
 
-    <section id="projects">
-      <h2>Projects</h2>
-      <ul>
-        <li>
-          <strong>Traxporta</strong> – Logistics app built with Vue and Syncfusion for the frontend and .NET C# for the backend.
-          [Private]
-        </li>
-        <!-- Add more projects here -->
-      </ul>
+    <section id="education">
+      <h2>Education</h2>
+      <p><strong>New Mexico State University, Main Campus - Las Cruces</strong></p>
+      <p>Bachelor of Science in Computer Science, Dec 2022</p>
     </section>
 
     <section id="resume">
@@ -61,6 +61,6 @@
   </main>
 </body>
 <footer>
-  <p>© 2025 wontliam — Built with 💻 & hosted on GitHub Pages</p>
+  <p>© 2025 William Le — Built with 💻 & hosted on GitHub Pages</p>
 </footer> 
 </html>
